<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragments.MenuOptionsFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonResidents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appbackground"
                android:fontFamily="sans-serif"
                android:text="@string/residents"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dormee_main"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/buttonPersonnel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appbackground"
                android:fontFamily="sans-serif"
                android:text="@string/personnel"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dormee_main"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/buttonEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appbackground"
                android:fontFamily="sans-serif"
                android:text="@string/equipment"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dormee_main"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/buttonEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appbackground"
                android:fontFamily="sans-serif"
                android:text="@string/events"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dormee_main"
                android:textSize="24sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>