<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_resident_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ResidentFragments.ResidentDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_student_Id"
            android:layout_width="125dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/student_id"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_student_id"
            android:layout_width="226dp"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_firstname"
            android:layout_width="125dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/label_firstname"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_firstname"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_lastname"
            android:layout_width="125dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/label_lastname"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_lastname"
            android:layout_width="226dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_birthdate"
            android:layout_width="137dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/label_birthdate"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_birthdate"
            android:layout_width="173dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_format"
            android:inputType="date" />

        <Button
            android:id="@+id/button_select_birthdate"
            android:layout_width="51dp"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@mipmap/calendar"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_gender"
            android:layout_width="102dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/label_gender"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/label_male"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/label_female"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_save_resident_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/appbackground"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/dormee_main"
        android:textSize="18sp" />

</LinearLayout>