<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ResidentFragments.ResidentDetailsPage3Fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewResidentName_page3"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewResidentStudentID_page3"
                    android:layout_width="219dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/label_room_number"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewRoomNumber_page3"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/contact_details"
        android:textColor="@color/dormee_main"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_mobile"
                    android:layout_width="59dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/label_mobile_number"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/text_mobile_number"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_email_address"
                    android:layout_width="59dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/email_address"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/text_email_address"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_street_address"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/label_address_street"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_city_address"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/city"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/text_country"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/country"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSaveContactDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appbackground"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/dormee_main"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>